# TicFocuser-ng

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  TicFocuser.cpp  TicFocuser.h  indi_ticfocus.xml  indi_ticfocuser.xml  tic_connection.cpp  tic_connection.h  tic_focus.cpp  tic_focus.h  tic_focuser.cpp  tic_focuser.h  tic_focuser_config.h.cmake
connection/: BluetoothConnection.cpp  BluetoothConnection.h  LibUsbConnection.cpp  LibUsbConnection.h  PololuUsbConnection.cpp  PololuUsbConnection.h  TicConnectionInterface.h  TicMediator.h  UsbConnectionBase.cpp  UsbConnectionBase.h  tic_connection.cpp
connection/driver_interfaces/: PololuUsbInterface.cpp  TicDriverInterface.h  TiclibInterface.cpp
connection/mediators/: BluetoothConnectionMediator.cpp  BluetoothConnectionMediator.h  LibUsbConnectionMediator.cpp  LibUsbConnectionMediator.h  PololuUsbConnectionMediator.cpp  PololuUsbConnectionMediator.h  PololuUsbInterface.cpp  TicBaseConnectionMediator.cpp  TicBaseConnectionMediator.h  TicMediatorInterface.h  TiclibInterface.cpp
connection/mediators/ticlib/: Stream.h  StreamBT.cpp  StreamBT.h  StreamSerial.cpp  TicBluetooth.cpp  TicBluetooth.h  TicUsb.cpp  TicUsb.h
connection/ticlib/: README.md  StreamBT.cpp  StreamSerial.cpp  StreamSerial.h  TicBase.cpp  TicDefs.cpp  TicDefs.h  TicUsb.cpp
extras/: ._ticfocuser_case.stl  ticfocuser_case.stl
tic/: README.md  Tic.cpp  Tic.h  TicBase.cpp  TicBase.h  TicUsb.cpp  TicUsb.h
